--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import "./app/allstyles.scss";
+
+* {
+  font-family: Poppins;
+  color: $text;
+}
+
