Completed site structure with placeholder

--- a/src/app/components/mainmenu/mainmenu.component.html
+++ b/src/app/components/mainmenu/mainmenu.component.html
@@ -1,3 +1,6 @@
 <div class="container">
   <p>This is where content will go via routing</p>
+  <p>This is an example of how <span> accent colors </span> can be used.</p>
+  <p>There are <span> two </span> accent colors, such as <span class="acc2"> this one</span>.</p>
+  <p>These colors can be <span>easily changed</span> using the <span class="acc2">"allstyles.scss"</span> file within the code.</p>
 </div>
