--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 
 <div class="container">
-  <h1>LOGO</h1>
-  <p>Option 1</p>
-  <p>Option 2</p>
-  <p>Option 3</p>
+  <h2>Title Goes Here</h2>
+<a href="#">About</a>
+<a href="#">Home</a>
+<a href="#">Contact</a>
 </div>
