--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,5 +5,15 @@
 * {
   font-family: Poppins;
   color: $text;
+
+  margin: 0;
+  padding: 0;
 }
 
+span {
+  color: $accent1;
+}
+
+.acc2 {
+  color: $accent2;
+}
