Added modular card component

--- a/src/app/components/mainmenu/mainmenu.component.html
+++ b/src/app/components/mainmenu/mainmenu.component.html
@@ -3,4 +3,23 @@
   <p>This is an example of how <span> accent colors </span> can be used.</p>
   <p>There are <span> two </span> accent colors, such as <span class="acc2"> this one</span>.</p>
   <p>These colors can be <span>easily changed</span> using the <span class="acc2">"allstyles.scss"</span> file within the code.</p>
+  <p>This is a test for a <a href="#" class="acc1">link</a> that also has an <a href="#" class="acc2">accent color</a></p>
+
+  <div class="cardholder">
+    <app-card
+    title="Title here" subtitle="This is a subtitle"
+    desc="This is a test for the description"
+    ></app-card>
+
+    <app-card
+    title="Title here" subtitle="This is a subtitle"
+    desc="This is a test for the description"
+    ></app-card>
+
+    <app-card
+    title="Title here" subtitle="This is a subtitle"
+    desc="This is a test for the description"
+    ></app-card>
+  </div>
+
 </div>
