--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,6 +14,25 @@ span {
   color: $accent1;
 }
 
+.acc1 {
+  color: $accent1;
+}
+
 .acc2 {
   color: $accent2;
+}
+
+.title {
+  font-size: 1.2rem;
+}
+.subtitle {
+  font-size: .8rem;
+}
+
+.cardholder {
+  display: flex;
+gap: 1rem;
+padding: 1rem 0;
+
+flex-wrap: wrap;
 }
